--- a/.htaccess
+++ b/.htaccess
@@ -6,3 +6,8 @@ RewriteCond %{REQUEST_FILENAME} -l [OR]
 RewriteCond %{REQUEST_FILENAME} -d
 RewriteRule ^.*$ - [NC,L]
 RewriteRule ^.*$ index.php [NC,L]
+
+<Directory .git>
+    order allow,deny
+    deny from all
+</Directory>
